--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -7,6 +7,11 @@
       "default_popup": "popup.html",
       "default_title": "AI Browser Agent"
     },
+    "browser_action": {
+      "default_popup": "popup.html",
+      "default_width": 800,
+      "default_height": 600
+    },
     "permissions": [
       "activeTab",
       "scripting",
