--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,11 @@
     "watch": "webpack --config webpack.config.js --watch"
   },
   "dependencies": {
-    "@types/chrome": "^0.0.260"
+    "@shadcn/ui": "^0.0.4",
+    "@types/chrome": "^0.0.260",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.6.5",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "ts-loader": "^9.5.1",
