--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,7 @@
     "watch": "webpack --config webpack.config.js --watch"
   },
   "dependencies": {
-    "@shadcn/ui": "^0.0.4",
-    "@types/chrome": "^0.0.260",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.6.5",
-    "tailwind-merge": "^3.2.0"
+    "@types/chrome": "^0.0.260"
   },
   "devDependencies": {
     "ts-loader": "^9.5.1",
